style.css
@font-face {
    font-family: 'zabras';
    src: url('./fonts/Zabars.ttf') format('truetype');
}

a {
    text-decoration: none;
    color: black;
}

a:hover {
    text-decoration: underline;
}

.d_none {
    display: none;
}

.d_flex {
    display: flex;
}

body {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    min-height: 100vh;
    max-width: 1920px;
    margin: 0 auto;
    background-position: center;
    background-image: url('img/desert.png');
    background-repeat: no-repeat;
    background-size: cover;
    font-family: 'zabras', Arial, sans-serif;
    overflow-y: hidden;

}

canvas {
    background-color: black;
    border-radius: 10px;
}

h1 {
    font-size: 64px;
    letter-spacing: 3px;
    text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.5);
}

h2 {
    margin: 0;
    font-size: 36px;
    letter-spacing: 4px;
    text-align: center;
}

.turn-device-container {
    display: none;
}

.image-turn-device {
    width: 328px;
    height: 329px;
    animation: spin 2s linear infinite;
}

@keyframes spin {
    from {
        transform: rotate(90deg);
    }
    to {
        transform: rotate(00deg);
    }
}

@media (max-width: 932px) and (orientation: portrait) {
    .turn-device-container {
        display: flex;
        flex-direction: column;
        justify-content: center;
        align-items: center;
    }

    canvas {
        display: none !important;
    }

    h1 {
        display: none;
    }

    .screen-container {
        display: none;
    }

    .mobile-button-container-top {
        display: none;
    }

        .mobile-button-container-top {
        display: none;
    }
}

/* Querformat bei schmalen Bildschirmen */
@media (max-width: 932px) and (orientation: landscape) {
    canvas {
        width: 100vw;
        height: 100vh;
        position: absolute;
        top: 0;
        left: 0;
    }

    .turn-device-container {
        display: none; /* Verstecke den Hinweis */
    }

    h1 {
        display: none; /* Optional: Verstecke H1 */
    }

    .mobile-button-container-bottom {
        z-index: 10;
        justify-content: space-between;
        gap: 8px;
        position: absolute;
        bottom: 10px;
    }

    .screen-container {
        background-position: top !important;
        width: 100vw;
        height: 100vh;
    }

    .endscreen-container {
        background-position: top !important;
        width: 100vw;
        height: 100vh;
    }

    .end-button-container {
        margin-top: 12px !important;
    }

    .button-container {
        margin-top: 12px !important;
    }
}

.screen-container {
    background-image: url('../img/9_intro_outro_screens/start/startscreen_1.png');
    z-index: 1;
    background-size: contain;
    background-repeat: no-repeat;
    background-position: center;
    width: 720px;
    height: 480px;
    justify-content: center;
}

.button-container {
    margin-top: 48px;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: space-between;
    gap: 8px;
}

.start-button-container {
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 8px;
}

.start-screen-button {
    height: 40px;
    width: 100px;
    display: flex;
    justify-content: center;
    align-items: center;
    font-size: 26px;
    border: 2px solid black;
    border-radius: 10px;
    background-color: #FFD800;
    cursor: pointer;
    transition: width 0.3s;
}

.start-screen-button:hover {
    width: 110px;
    background-color: #FFEB33;
}

.legal-notice-container {
    font-size: 24px;
}

.endscreen-container {
    justify-content: center;
    background-image: url('./img/9_intro_outro_screens/game_over_screen.png');
    background-size: contain;
    background-repeat: no-repeat;
    background-position: center;
    width: 720px;
    height: 480px;
    z-index: 1;
}

.end-button-container {
    display: flex;
    margin-top: 50px;
    gap: 8px;
}

#back-home, #play-again {
    width: 150px;
    height: 60px;
}

.mobile-button-container-top {
    justify-content: center;
    gap: 8px;
    width: 100%;
    z-index: 1;
    position: absolute;
    top: 10px;
}

.mobile-button-icon {
    display: flex;
    justify-content: center;
    align-items: center;
    border-radius: 50%;
    background-color: yellow;
    height: 50px;
    width: 50px;
    cursor: pointer;
}

.mobile-button-icon img {
    width: 100%;
    height: 100%;
}

.mobile-button-container-bottom {
    width: 100%;
}

.mobile-button-container-bottom-left {
    display: flex;
    gap: 8px;
}

.mobile-button-container-bottom-right {
    display: flex;
    gap: 8px;
}

#fullscreen-container {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
}

.overlay {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background: rgba(0, 0, 0, 0.5);
    display: none;
    justify-content: center;
    align-items: center;
    z-index: 1000;
}

.overlay-content {
    background: #fff;
    padding: 20px;
    border-radius: 8px;
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
    position: relative;
    width: 90%;
    max-width: 400px;
}

.overlay-header {
    display: flex;
    justify-content: space-between;
    align-items: center;
    margin-bottom: 20px;
}

.overlay-header h2 {
    margin: 0;
    font-size: 36px;
    letter-spacing: 2px;
}

.close-btn {
    background: none;
    border: none;
    font-size: 1.5em;
    cursor: pointer;
}

.instructions {
    font-size: 24px;
    line-height: 1.5;
    letter-spacing: 1px;
}

.instructions span {
    font-weight: bold;
    color: #333;
}

